tests/auto/corelib/xml/qxmlstream/XML-Test-Suite/xmlconf/ibm/valid/P68/ibm68v01.dtd
<!ENTITY ge1 "abcdef">
<!ELEMENT a EMPTY>
<!ATTLIST a attr1 CDATA "&ge1;">

